# MLZ-capstone

./: README.md  diabetes_prediction.ipynb  predict.py  pyproject.toml  test.py  train.py
