[project]
name = "mlz-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
